# shade

./: Cargo.toml  readme.md
src/: main.rs
src/core/: error.rs  logger.rs  mod.rs  shellcode.rs  types.rs  unloader.rs
src/core/memory/: alloc.rs  mod.rs  rw.rs  snapshot.rs
src/core/pe/: exports.rs  mod.rs  patch.rs
src/core/process/: finder.rs  handle.rs  mod.rs
src/ui/: app.rs  builder.rs
