[package]
name = "shade"
version = "0.2.0"
edition = "2021"

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug"
] }
thiserror = "2.0.18"
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"
